--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
 
 <div class="container">
-  <h1>Button for ESp32 x</h1>
-  <button type="submit" class="btn btn-info" onclick="getblynk()">Click Me!</button>
+  <h1>Button for Servo x</h1>
+  <button type="submit" class="btn btn-info" onclick="getblynk()">Click Servo</button>
+</div>
+<div class="container2">
+  <h1>Button for Motor x</h1>
+  <button type="submit" class="btn btn-info" onclick="getblynk()">Click Motor/button>
 </div>
 <!--<button></button>-->
 <script>
