ubah tajuk servo and motor

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
 <div class="container">
-  <h1>Button for Servo x</h1>
+  <h1>Button for Servo </h1>
   <button type="submit" class="btn btn-info" onclick="getblynk()">Click Servo</button>
 </div>
 <div class="container2">
-  <h1>Button for Motor x</h1>
+  <h1>Button for Motor </h1>
   <button type="submit" class="btn btn-info" onclick="getblynk()">Click Motor/button>
 </div>
 <!--<button></button>-->
